sdk/v0.5.19/gemini.mdx
---
title: "gemini"
icon: "square-m"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/functions/gemini.py#L0\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
noindex: true
---
# <span style={{ 'color': 'gray' }}>module</span>&nbsp; pixeltable.functions.gemini


Pixeltable UDFs
that wrap various endpoints from the Google Gemini API. In order to use them, you must
first `pip install google-genai` and configure your Gemini credentials, as described in
the [Working with Gemini](https://docs.pixeltable.com/notebooks/integrations/working-with-gemini) tutorial.


## <span style={{ 'color': 'gray' }}>func</span>&nbsp; invoke_tools()

```python Signature
invoke_tools(
    tools: pixeltable.func.tools.Tools,
    response: pixeltable.exprs.expr.Expr
) -> pixeltable.exprs.inline_expr.InlineDict
```

Converts an OpenAI response dict to Pixeltable tool invocation format and calls `tools._invoke()`.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; generate_content()

```python Signature
@pxt.udf
generate_content(
    contents: pxt.Json,
    *,
    model: pxt.String,
    config: pxt.Json | None = None,
    tools: pxt.Json | None = None
) -> pxt.Json
```

Generate content from the specified model.

Request throttling:
Applies the rate limit set in the config (section `gemini.rate_limits`; use the model id as the key). If no rate
limit is configured, uses a default of 600 RPM.

__Requirements:__

- `pip install google-genai`

**Parameters:**

- **`contents`** (`pxt.Json`): The input content to generate from. Can be a prompt, or a list containing images and text
    prompts, as described in: [https://ai.google.dev/gemini-api/docs/text-generation](https://ai.google.dev/gemini-api/docs/text-generation)
- **`model`** (`pxt.String`): The name of the model to use.
- **`config`** (`pxt.Json | None`): Configuration for generation, corresponding to keyword arguments of
    `genai.types.GenerateContentConfig`. For details on the parameters, see:
    [https://googleapis.github.io/python-genai/genai.html#genai.types.GenerateContentConfig](https://googleapis.github.io/python-genai/genai.html#genai.types.GenerateContentConfig)
- **`tools`** (`pxt.Json | None`): An optional list of Pixeltable tools to use. It is also possible to specify tools manually via the
    `config['tools']` parameter, but at most one of `config['tools']` or `tools` may be used.

**Returns:**

- `pxt.Json`: A dictionary containing the response and other metadata.

**Examples:**

Add a computed column that applies the model `gemini-2.5-flash` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
tbl.add_computed_column(
    response=generate_content(tbl.prompt, model='gemini-2.5-flash')
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; generate_embedding()

```python Signature
@pxt.udf
generate_embedding(
    input: pxt.String,
    *,
    model: pxt.String,
    config: pxt.Json | None = None,
    use_batch_api: pxt.Bool = False
) -> pxt.Array[(None,), float32]
```

Generate embeddings for the input strings. For more information on Gemini embeddings API, see:
[https://ai.google.dev/gemini-api/docs/embeddings](https://ai.google.dev/gemini-api/docs/embeddings)

__Requirements:__

- `pip install google-genai`

**Parameters:**

- **`input`** (`pxt.String`): The strings to generate embeddings for.
- **`model`** (`pxt.String`): The Gemini model to use.
- **`config`** (`pxt.Json | None`): Configuration for embedding generation, corresponding to keyword arguments of
    `genai.types.EmbedContentConfig`. For details on the parameters, see:
    [https://googleapis.github.io/python-genai/genai.html#genai.types.EmbedContentConfig](https://googleapis.github.io/python-genai/genai.html#genai.types.EmbedContentConfig)
- **`use_batch_api`** (`pxt.Bool`): If True, use [Gemini's Batch API](https://ai.google.dev/gemini-api/docs/batch-api) that provides
    a higher throughput at a lower cost at the expense of higher latency.

**Returns:**

- `pxt.Array[(None,), float32]`: The generated embeddings.

**Examples:**

Add a computed column with embeddings to an existing table with a `text` column:
```python
t.add_computed_column(embedding=generate_embedding(t.text))
```

Add an embedding index on `text` column:
```python
t.add_embedding_index(
   t.text,
   embedding=generate_embedding.using(
       model='gemini-embedding-001', config={'output_dimensionality': 3072}
   ),

```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; generate_images()

```python Signature
@pxt.udf
generate_images(
    prompt: pxt.String,
    *,
    model: pxt.String,
    config: pxt.Json | None = None
) -> pxt.Image
```

Generates images based on a text description and configuration. For additional details, see:
[https://ai.google.dev/gemini-api/docs/image-generation](https://ai.google.dev/gemini-api/docs/image-generation)

Request throttling:
Applies the rate limit set in the config (section `imagen.rate_limits`; use the model id as the key). If no rate
limit is configured, uses a default of 600 RPM.

__Requirements:__

- `pip install google-genai`

**Parameters:**

- **`prompt`** (`pxt.String`): A text description of the images to generate.
- **`model`** (`pxt.String`): The model to use.
- **`config`** (`pxt.Json | None`): Configuration for generation, corresponding to keyword arguments of
    `genai.types.GenerateImagesConfig`. For details on the parameters, see:
    [https://googleapis.github.io/python-genai/genai.html#genai.types.GenerateImagesConfig](https://googleapis.github.io/python-genai/genai.html#genai.types.GenerateImagesConfig)

**Returns:**

- `pxt.Image`: The generated image.

**Examples:**

Add a computed column that applies the model `imagen-4.0-generate-001` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
tbl.add_computed_column(
    response=generate_images(tbl.prompt, model='imagen-4.0-generate-001')
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; generate_videos()

```python Signature
@pxt.udf
generate_videos(
    prompt: pxt.String | None = None,
    image: pxt.Image | None = None,
    *,
    model: pxt.String,
    config: pxt.Json | None = None
) -> pxt.Video
```

Generates videos based on a text description and configuration. For additional details, see:
[https://ai.google.dev/gemini-api/docs/video](https://ai.google.dev/gemini-api/docs/video)

At least one of `prompt` or `image` must be provided.

Request throttling:
Applies the rate limit set in the config (section `veo.rate_limits`; use the model id as the key). If no rate
limit is configured, uses a default of 600 RPM.

__Requirements:__

- `pip install google-genai`

**Parameters:**

- **`prompt`** (`pxt.String | None`): A text description of the videos to generate.
- **`image`** (`pxt.Image | None`): An image to use as the first frame of the video.
- **`model`** (`pxt.String`): The model to use.
- **`config`** (`pxt.Json | None`): Configuration for generation, corresponding to keyword arguments of
    `genai.types.GenerateVideosConfig`. For details on the parameters, see:
    [https://googleapis.github.io/python-genai/genai.html#genai.types.GenerateVideosConfig](https://googleapis.github.io/python-genai/genai.html#genai.types.GenerateVideosConfig)

**Returns:**

- `pxt.Video`: The generated video.

**Examples:**

Add a computed column that applies the model `veo-3.0-generate-001` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
tbl.add_computed_column(
    response=generate_videos(tbl.prompt, model='veo-3.0-generate-001')
)
```

